--- a/stepper_pio/CMakeLists.txt
+++ b/stepper_pio/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(${PROJECT_NAME}
-    main.c
+    main.cpp
 )
 
 # cria header com nome <programa>.pio.h
